// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title matches snapshot when does not have margins 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4em;
  margin-top: 0;
  margin-bottom: 0;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2.8em;
  }
}

<h1
  className="emotion-0"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h1 size 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4em;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2.8em;
  }
}

<h1
  className="emotion-0"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h2 size 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2.4em;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2em;
  }
}

<h1
  className="emotion-0"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h3 size 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2em;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 1.6em;
  }
}

<h1
  className="emotion-0"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a h4 size 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 1.3em;
  font-weight: 400;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 1.1em;
  }
}

<h1
  className="emotion-0"
>
  Title content
</h1>
`;

exports[`Title matches snapshot when has a node as children 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 2.4em;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2em;
  }
}

<h1
  className="emotion-0"
>
  <span
    style={
      Object {
        "fontWeight": 500,
      }
    }
  >
    Some 
  </span>
   content
</h1>
`;

exports[`Title matches snapshot when is aligned to the right 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4em;
  text-align: right;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2.8em;
  }
}

<h1
  className="emotion-0"
>
  Some content
</h1>
`;

exports[`Title matches snapshot when is center aligned 1`] = `
.emotion-0 {
  color: #172b4e;
  font-weight: 300;
  font-size: 3.4em;
  text-align: center;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 2.8em;
  }
}

<h1
  className="emotion-0"
>
  Some content
</h1>
`;
